# UE_calculations

./: .gitignore  README.md  pyproject.toml
src/: big_boss_comparison.ipynb  boss_hits_simulation.ipynb  boss_setup_gridsearch.py  loadout_test.py
src/Gear/: cartel_insignia.py  cartel_medallion.py  phantom_claw.py  shadow_insignia.py  street_insignia.py  street_medallion.py  thanatos_mortar.py  underworld_crown.py  underworld_ring.py
src/Gear/collector/: __init__.py  flame_time.py  gilded_obsidian.py
src/Gear/gustavo/: __init__.py  tohil.py
src/Gear/overkill/: __init__.py  megakill.py  overkills_body_armor.py  ultrakill.py
src/Gear/silas/: __init__.py  bullet_storm.py  pulse_breaker.py  scythe_claw.py
src/Gear/tanya/: __init__.py  flaming_heart.py  grisha.py  nightfang.py  nightshade_grips.py  obsidian_edge.py
src/Lieutenants/: cole.py  collector.py  frank.py  gustavo.py  jared.py  maddox.py  overkill.py  silas.py  slaughterer.py  tanya.py  yugo.py
src/Simulation/: big_boss_comparison.ipynb  new_boss_simulation.py  plot_gridsearch.py
src/UE_core/: account.py  gear.py  lieutenant.py  loadout.py  stats.py  utils.py
