[tool.poetry]
name = "ue-calculations"
version = "0.1.0"
description = "Some simulations and calculations around UE"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
requests = "^2.32.3"
tqdm = "^4.66.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
