[project]
name = "ue-calculations"
version = "0.1.0"
description = "Some simulations and calculations around UE"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas>=2.2.3,<3",
    "ipykernel>=6.29.5,<7",
    "requests>=2.32.3,<3",
    "tqdm>=4.66.6,<5",
    "seaborn>=0.13.2,<0.14",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
